--- a/portfolio/src/styles/common.scss
+++ b/portfolio/src/styles/common.scss
@@ -1,3 +1,16 @@
+h1 {
+  text-align: center;
+  font-size: 30px;
+}
+h2 {
+  text-align: center;
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 20px;
+  font-family: 700;
+}
 .section {
   display: flex;
   flex-direction: row;
@@ -25,4 +38,47 @@
   height: 40px;
   width: 40px;
   margin: 20px;
+}
+
+.interests {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.beach-img {
+  margin-left: 30px;
+  height: 400px;
+  width: 300px;
+}
+
+.interests-text {
+  width: 50vw;
+}
+
+// img {
+//   height: 400px;
+//   width: 300px;
+// }
+
+.list {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+.icon-small {
+  font-size: 1.5rem;
+}
+
+.contact-title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.footer {
+  background-color: orange;
 }
