--- a/portfolio/src/styles/main.scss
+++ b/portfolio/src/styles/main.scss
@@ -1,4 +1,15 @@
+// $PrimaryTang: #f08700;
+// $PrimaryOrange: #f49f0a;
+// $PrimaryYellow: #efca08;
+// $PrimaryGreen: #00a6a6;
+// $primaryBlue: #bbdef0;
+$PrimaryOne: #1e212b;
+$PrimaryTwo: #4d8b31;
+$PrimaryThree: #ffc800;
+$PrimaryFour: #ff8427;
+$PrimaryFive: #FFFFF9;
+$PrimaryFont: 'Oxygen', sans-serif;
+
 @import '~bulma/bulma.sass';
 @import './navbar.scss';
 @import './common.scss';
-
